# mp3-set-title

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  mp3_set_title.py  pyproject.toml
.github/workflows/: ci.yml
python/: mp3-set-title.py  mp3_set_title.py  pyproject.toml
rust/: Cargo.toml
rust/src/: main.rs
src/: main.rs
