[package]
name = "mp3-set-title"
author = "DCW <wckdouglas@gmail.com>"
description = "Set title of mp3 files in a given directory using their file names"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "^0.11.7"
glob = "0.3.1"
id3 = "1.6.0"
log = "^0.4.17"
