[tool.poetry]
name = "mp3"
version = "0.1.0"
description = "Manipulate mp3 metadata to sync file name to song name"
authors = ["Douglas Wu <wckdouglas@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mutagen = "^1.46.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
