[tool.poetry]
name = "mp3"
version = "0.1.0"
description = "Manipulate mp3 metadata"
authors = ["Douglas Wu <wckdouglas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mutagen = "^1.46.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
